Fixed white gap

--- a/src/index.css
+++ b/src/index.css
@@ -40,7 +40,7 @@ html {
 
 body {
   font-family: var(--font-family);
-  background: #eee;
+  background: #030b6b;
 }
 
 section {
@@ -61,7 +61,8 @@ section {
 }
 
 .header {
-  padding-top: 2rem;
+  /* padding-top: 2rem; */
+  padding-top: 0;
 }
 
 /* UTILITY CLASSES */
